--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ ul, li {
     text-align: left;
     background: transparent;
     border: 0;
+    outline: 0;
 }
 
 .menu-btn-icon{
@@ -97,6 +98,10 @@ ul, li {
 
 .pushy-link {
 	margin-left: 20px;
+}
+
+.pushy-link:hover{
+	border-bottom:5px solid #5FAEE3 ;
 }
 
 .pushy-link a{
